Split triple-duty `@tabs` into three separate variables
While the rest of `@tabs` was a list of `[identifier, title]` pairs, the
first element instead contained the active tab's identifier (that is, a
duplicate of a later value), and the value to pass as `:id` when
building tab-change URLs.

Now, `@tabs` only contains the tab pairs; the other values live in
`@active_tab` and `@tab_id`, respectively.

--- a/app/views/layouts/_tabs.html.haml
+++ b/app/views/layouts/_tabs.html.haml
@@ -1,7 +1,7 @@
 - if @tabs
   %ul{:class => "nav nav-tabs #{@layout == 'dashboard' ? 'nav-tabs-pf' : nil}"}
-    - @tabs[1..-1].each do |tab|
-      - if tab[0] == @tabs[0][0]
+    - @tabs.each do |tab|
+      - if tab[0] == @active_tab
         %li.active
           %a
             = h(tab[1])
@@ -15,20 +15,20 @@
                 = link_to(tab[1],
                   {:action => 'change_tab',
                    :tab    => tab[0],
-                   :id     => @tabs[0][1]},
+                   :id     => @tab_id},
                   "data-miq_sparkle_on"  => true,
                   "data-miq_sparkle_off" => true,
                   :remote                => true,
                   "data-method"          => :post)
               - else
-                = link_to(tab[1], :action => 'change_tab', :tab => tab[0], :id => @tabs[0][1])
+                = link_to(tab[1], :action => 'change_tab', :tab => tab[0], :id => @tab_id)
             - else
               - if %w(report ops).include?(@layout)
                 - if @layout == "ops"
                   = link_to(tab[1],
                     {:action => 'change_tab',
                      :tab    => tab[0],
-                     :id     => @tabs[0][1]},
+                     :id     => @tab_id},
                     "data-miq_sparkle_on"  => true,
                     "data-miq_sparkle_off" => true,
                     :remote                => true,
@@ -37,14 +37,14 @@
                   = link_to(tab[1],
                     {:action => 'change_tab',
                      :tab    => tab[0],
-                     :id     => @tabs[0][1]},
+                     :id     => @tab_id},
                     "data-miq_check_for_changes" => true,
                     "data-miq_sparkle_on"        => true,
                     "data-miq_sparkle_off"       => true,
                     :remote                      => true,
                     "data-method"                => :post)
               - else
-                = link_to(tab[1], {:action => 'change_tab', :tab => tab[0], :id => @tabs[0][1]}, :onclick => "return miqCheckForChanges()")
+                = link_to(tab[1], {:action => 'change_tab', :tab => tab[0], :id => @tab_id}, :onclick => "return miqCheckForChanges()")
   %br{:clear => "all"}/
 - if !@tabs && (@lastaction == "show_list" || !@edit && !session[:menu_click])
   - if @edit && @edit[:adv_search_applied] != nil && !session[:menu_click]
