--- a/app/views/layouts/angular/_multi_auth_credentials.html.haml
+++ b/app/views/layouts/angular/_multi_auth_credentials.html.haml
@@ -319,6 +319,10 @@
     miq_tabs_show_hide("#ssh_keypair_tab", true);
     miq_tabs_init('#auth_tabs');
     $('#auth_tabs').show();
+%div{"ng-if" => "#{ng_model}.emstype == 'nuage'"}
+  :javascript
+    miq_tabs_init('#auth_tabs');
+    $('#auth_tabs').show();
 %div{"ng-if" => "#{ng_model}.ems_controller == 'ems_container'"}
   :javascript
     miq_tabs_show_hide("#hawkular_tab", true);
