--- a/app/assets/templates/service/edit.html.haml
+++ b/app/assets/templates/service/edit.html.haml
@@ -5,21 +5,21 @@
   %div
     %div
       .form-group{"ng-class" => "{'has-error': angularForm.name.$invalid}"}
-        %label.col-md-2.control-label{"for" => "textInput-markup"}
+        %label.col-md-2.control-label{"for" => "name"}
           = _("Name")
         .col-md-8
           %input.form-control{"type"        => "text",
                               "id"          => "name",
                               "name"        => "name",
                               "ng-model"    => "serviceModel.name",
-                              "maxlength"   => 20,
+                              "maxlength"   => 50,
                               "required"    => "",
                               "checkchange" => "",
                               "auto-focus"  => ""}
           %span.help-block{"ng-show" => "angularForm.name.$error.required"}
             = _("Required")
       .form-group{"ng-class" => "{'has-error': angularForm.description.$invalid}"}
-        %label.col-md-2.control-label{"for" => "textInput-markup"}
+        %label.col-md-2.control-label{"for" => "description"}
           = _("Description")
         .col-md-8
           %input.form-control{"type"        => "text",
