--- a/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
+++ b/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
@@ -50,6 +50,19 @@
       %span.help-block{"ng-show" => "angularForm.#{prefix}_api_port.$error.detectedSpaces"}
         = _("Spaces are prohibited")
 
+%div{"ng-if" => defined?(apiversion_hide) ? false : true}
+  .form-group{"ng-class" => "{'has-error': angularForm.api_version.$invalid}",
+              "ng-if"    => "emsCommonModel.emstype == 'rhevm'"}
+    %label.col-md-2.control-label{"for" => "api_version"}
+      = _('API Version')
+    .col-md-8
+      = select_tag("api_version",
+                       options_for_select(@rhevm_api_versions),
+                       "ng-model"                    => "#{ng_model}.api_version",
+                       "checkchange"                 => "",
+                       "ng-required"                 => defined?(apiversion_not_required) ? false: true,
+                       "selectpicker-for-select-tag" => "")
+
 %div{"ng-if" => defined?(security_protocol_hide) ? false : true}
   .form-group{"ng-class" => "{'has-error': angularForm.#{prefix}_security_protocol.$invalid}",
               "ng-if"    => "emsCommonModel.emstype == 'openstack' || emsCommonModel.emstype == 'openstack_infra' || emsCommonModel.emstype == 'scvmm'"}
