--- a/app/views/layouts/angular/_multi_auth_credentials.html.haml
+++ b/app/views/layouts/angular/_multi_auth_credentials.html.haml
@@ -131,7 +131,8 @@
                                               :id                     => record.id,
                                               :prefix                 => "metrics",
                                               :ng_reqd_hostname       => "#{ng_model}.metrics_userid != '' && #{ng_model}.metrics_userid != undefined",
-                                              :ng_reqd_api_port       => "false"}
+                                              :ng_reqd_api_port       => "false",
+                                              :apiversion_hide        => "true"}
             = render :partial => "layouts/angular-bootstrap/auth_credentials_angular_bootstrap",
                                  :locals  => {:ng_show           => true,
                                               :ng_model          => "#{ng_model}",
