--- a/app/views/miq_ae_customization/_dialog_edit_tree.html.haml
+++ b/app/views/miq_ae_customization/_dialog_edit_tree.html.haml
@@ -9,7 +9,7 @@
         -# Div to hold the actual tree
         #dialog_edit_tree_div{:style => "width: 100%; height: 100%"}
           #dialog_edit_treebox{:style => "width: 100%; height: 100%; color: #000; overflow: hidden;"}
-          = render(:partial => "layouts/dynatree",
+          -#= render(:partial => "layouts/dynatree",
             :locals         => {:tree_id  =>  "dialog_edit_treebox",
               :tree_name                  =>  "dialog_edit_tree",
               :json_tree                  =>  @dialog_edit_tree,
@@ -22,3 +22,4 @@
               :tree_state                 =>  true,
               :cookie_id_prefix           => "edit_treeOpenStatex",
               :multi_lines                =>  true})
+          = render(:partial => 'shared/tree', :locals => {:tree => @dialog_edit_tree, :name => @dialog_edit_tree.name})
