Render left side tree and hide toolbar

--- a/app/assets/templates/service/edit.html.haml
+++ b/app/assets/templates/service/edit.html.haml
@@ -32,3 +32,6 @@
           %span.help-block{"ng-show" => "angularForm.description.$error.required"}
             = _("Required")
   %form-buttons
+:javascript
+  $('#pc_div_1').hide();
+  miqDimDiv('#svcs_tree_div', true);
