Add buttons to the paging div

--- a/app/assets/templates/service/edit.html.haml
+++ b/app/assets/templates/service/edit.html.haml
@@ -31,7 +31,9 @@
                               "checkchange" => ""}
           %span.help-block{"ng-show" => "angularForm.description.$error.required"}
             = _("Required")
-  %form-buttons
+  %paging-div-form-buttons{'paging_div_buttons_id'   => "angular_paging_div_buttons",
+                           'paging_div_buttons_type' => "Save"}
 :javascript
   $('#pc_div_1').hide();
+  $('#form_buttons_div').html("<div id='angular_paging_div_buttons'></div>");
   miqDimDiv('#svcs_tree_div', true);
