--- a/app/views/miq_ae_customization/_dialog_res_remove.html.haml
+++ b/app/views/miq_ae_customization/_dialog_res_remove.html.haml
@@ -5,10 +5,10 @@
   {:controller => "miq_ae_customization",
    :action     => "dialog_res_remove",
    :id         => @record.id || 'new',
-   :widget_id  => "#{curr_pos}_#{obj[:id]}"},
+   :widget_id  => obj[:id]},
   "data-miq_sparkle_on" => true,
   :remote               => true,
   "data-method"         => :post,
-  :id                   => "#{parent_id}_#{obj[:id]}_close",
+  :id                   => obj[:id],
   :title                => _("Remove this %{type}") % {:type => typ.capitalize.singularize},
   :class                => "fa fa-close pull-right")
