Initial HTML -> Angular conversion including the new controller and stubbed out api's

--- a/app/views/layouts/angular/_x_edit_buttons_angular.html.haml
+++ b/app/views/layouts/angular/_x_edit_buttons_angular.html.haml
@@ -48,4 +48,5 @@
                :class => "btn btn-default",
                :alt   => _("Cancel"),
                :title => _("Cancel"),
-               "ng-click" => "cancelClicked($event)")
+               "ng-click" => "cancelClicked($event)",
+               "ng-hide"  => "hideCancel")
