Changes and refactors following review comments
* change API requests (GET and POST)
* move all views under deploy_containers_provider subdirectory
* add response error message
* add more i18n support
* fix router checkbox bug
* remove commented out code
* remove unused functions and dependencies

--- a/app/views/static/deploy_containers_provider/deploy-provider-details-cdn-review.html.haml
+++ b/app/views/static/deploy_containers_provider/deploy-provider-details-cdn-review.html.haml
@@ -5,14 +5,18 @@
         = _("CDN Channel:")
       %span.wizard-miq-review-item-value {{data.cdnEnabled ? "Enabled" : "Disabled"}}
     .wizard-miq-review-item{"ng-if" => "data.cdnEnabled"}
-      %span.wizard-miq-review-item-label Username:
+      %span.wizard-miq-review-item-label
+        = _("Username:")
       %span.wizard-miq-review-item-value {{data.rhnUsername}}
     .wizard-miq-review-item{"ng-if" => "data.cdnEnabled"}
-      %span.wizard-miq-review-item-label Password:
+      %span.wizard-miq-review-item-label
+        = _("Password:")
       %span.wizard-miq-review-item-value {{data.rhnPassword}}
     .wizard-miq-review-item{"ng-if" => "data.cdnEnabled"}
-      %span.wizard-miq-review-item-label SKU:
+      %span.wizard-miq-review-item-label
+        = _("SKU:")
       %span.wizard-miq-review-item-value {{data.rhnSKU}}
     .wizard-miq-review-item{"ng-if" => "data.cdnEnabled"}
-      %span.wizard-miq-review-item-label RHN Satellite URL:
+      %span.wizard-miq-review-item-label
+        = _("RHN Satellite URL:")
       %span.wizard-miq-review-item-value {{data.specifySatelliteUrl ? data.rhnSatelliteUrl : 'Unspecified'}}
