--- a/app/views/static/deploy_containers_provider/deploy-provider-add-roles-popover.html.haml
+++ b/app/views/static/deploy_containers_provider/deploy-provider-add-roles-popover.html.haml
@@ -1,22 +1,22 @@
 .add-roles-list
   .label.label-primary.add-role-item{"ng-click" => "addMaster(node)", "ng-disabled" => "node.master"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Master
+    = _("Master")
   .label.label-primary.add-role-item{"ng-click" => "addNode(node)", "ng-disabled" => "node.node"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Node
+    = _("Node")
   .label.label-primary.add-role-item{"ng-click" => "addStorage(node)", "ng-disabled" => "node.storage"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Storage
+    = _("Storage")
   .label.label-primary.add-role-item{"ng-click" => "addLoadBalancer(node)", "ng-disabled" => "node.loadBalancer"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Load Balancer
+    = _("Load Balancer")
   .label.label-primary.add-role-item{"ng-click" => "addDns(node)", "ng-disabled" => "node.dns"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    DNS
+    = _("DNS")
   .label.label-primary.add-role-item{"ng-click" => "addEtcd(node)", "ng-disabled" => "node.etcd"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Etcd
+    = _("Etcd")
   .label.label-primary.add-role-item{"ng-click" => "addInfrastructure(node)", "ng-disabled" => "node.infrastructure"}
     %span.fa.fa-plus{"aria-hidden" => "true"}
-    Infrastructure
+    = _("Infrastructure")
