--- a/app/views/static/deploy_containers_provider/deploy-provider-details-no-provider.html.haml
+++ b/app/views/static/deploy_containers_provider/deploy-provider-details-no-provider.html.haml
@@ -98,7 +98,7 @@
                   Infrastructure
                   %a
                     %span.fa.fa-close{"aria-hidden" => "true", "ng-click" => "removeInfrastructure(node)"}
-                %a.label.label-default{"ng-if" => "!node.master || !node.node || !node.storage || !node.loadBalancer || !node.dns || !node.etcd || !node.infrastructure", "popover-placement" => "right", "popover-template" => "'/static/deploy-provider-add-roles-popover.html'", "popover-trigger" => "focus", :tabindex => "0", :type => "button"}
+                %a.label.label-default{"ng-if" => "!node.master || !node.node || !node.storage || !node.loadBalancer || !node.dns || !node.etcd || !node.infrastructure", "popover-placement" => "right", "popover-template" => "'/static/deploy_containers_provider/deploy-provider-add-roles-popover.html'", "popover-trigger" => "focus", :tabindex => "0", :type => "button"}
                   %span.fa.fa-plus{"aria-hidden" => "true"}
     .table-footer
       .badge{:tooltip => "{{mastersWarning}}", "tooltip-placement" => "right"}
@@ -146,35 +146,37 @@
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.loadBalancer", :role => "presentation", :type => "checkbox"}
-                  Load Balancer
+                = _("Load Balancer")
           .row
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.master", :role => "presentation", :type => "checkbox"}
-                  Master
+                = _("Master")
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.dns", :role => "presentation", :type => "checkbox"}
-                  DNS
+                = _("DNS")
           .row
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.node", :role => "presentation", :type => "checkbox"}
-                  Node
+                = _("Node")
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.etcd", :role => "presentation", :type => "checkbox"}
-                  Etcd
+                = _("Etcd")
           .row
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.storage", :role => "presentation", :type => "checkbox"}
-                  Storage
+                = _("Storage")
             .col-sm-6
               %label.checkbox-inline
                 %input{"ng-model" => "newHost.infrastructure", :role => "presentation", :type => "checkbox"}
-                  Infrastructure
+                = _("Infrastructure")
       .modal-footer
-        %button.btn.btn-default{"ng-click" => "cancelAddDialog()", :type => "button"} Cancel
+        %button.btn.btn-default{"ng-click" => "cancelAddDialog()", :type => "button"}
+          = _("Cancel")
         %button.btn.btn-primary{"ng-class" => "{disabled: !newHost.vmName || newHost.vmName.length === 0} ",
-        "ng-click" => "saveAddDialog()", :type => "button"} Add
+        "ng-click" => "saveAddDialog()", :type => "button"}
+          = _("Add")
