Removed usage of ng-app from the angular form.
- Cleaned up code and made adjustments to make it work with miq_bootstrap instead of using ng-app.
- Removed ui-router

--- a/app/views/ems_cloud/arbitration_profile_edit.html.haml
+++ b/app/views/ems_cloud/arbitration_profile_edit.html.haml
@@ -1,5 +1,7 @@
 = render :partial => "layouts/flash_msg"
-%div{"ui-view" => ""}
+%div{'ng-controller' => 'arbitrationProfileFormController', :id => 'angular_form_div'}
+  %div{'ng-include' => "'/static/ems_cloud/arbitration_profile_edit.html'"}
 
 :javascript
   ManageIQ.angular.app.value('arbitrationProfileFormId', '#{@arbitration_profile.id || "new"}');
+  miq_bootstrap('#angular_form_div');
