Addressed PR feedback.
Removed some of the unused files
Moved ng-controller to inner div, having it on the outer div was causing $scope.angularForm to be undefined

--- a/app/views/shared/views/ems_common/show.html.haml
+++ b/app/views/shared/views/ems_common/show.html.haml
@@ -10,7 +10,7 @@
   - elsif @showtype == "details"
     = render(:partial => "layouts/gtl", :locals => {:action_url => @lastaction})
   - elsif @showtype ==  "item"
-    = render(:partial => "layouts/#{@showtype}")
+    = render(:partial => "layouts/item")
   - elsif @showtype == "compare"
     = render :partial => "layouts/compare"
   - elsif @showtype == "timeline"
