--- a/app/views/static/ems_cloud/arbitration_profile_edit.html.haml
+++ b/app/views/static/ems_cloud/arbitration_profile_edit.html.haml
@@ -1,11 +1,11 @@
-%form.form-horizontal#form_div{"name" => "angularForm"}
+%form.form-horizontal#form_div{"name" => "angularForm", 'ng-controller' => 'arbitrationProfileFormController'}
   %div
     %div
       .form-group{"ng-class" => "{'has-error': angularForm.name.$invalid}"}
   %div
     %div
       .form-group{"ng-class" => "{'has-error': angularForm.name.$invalid}"}
-        %label.col-md-2.control-label{"for" => "textInput-markup"}
+        %label.col-md-2.control-label{"for" => "name"}
           = _("Name")
         .col-md-8
           %input.form-control{"type"        => "text",
@@ -19,7 +19,7 @@
           %span.help-block{"ng-show" => "angularForm.name.$error.required"}
             = _("Required")
       .form-group{"ng-class" => "{'has-error': angularForm.description.$invalid}"}
-        %label.col-md-2.control-label{"for" => "textInput-markup"}
+        %label.col-md-2.control-label{"for" => "description"}
           = _("Description")
         .col-md-8
           %input.form-control{"type"        => "text",
