--- a/app/views/layouts/listnav/_ems_middleware.html.haml
+++ b/app/views/layouts/listnav/_ems_middleware.html.haml
@@ -9,5 +9,6 @@
           = link_to(_('Summary'), {:action => 'show', :id => @record, :display => 'main'}, :title => _("Show Summary"))
     = miq_accordion_panel(_("Relationships"), false, "ems_middleware_rel") do
       %ul.nav.nav-pills.nav-stacked
-        - %w(middleware_domain middleware_server middleware_deployment middleware_datasource middleware_jms).each do |ent|
+        - %w(middleware_domain middleware_server middleware_deployment middleware_datasource
+          middleware_messaging).each do |ent|
           = multiple_relationship_link(@record, ent)
