shared/master_toggle - render every masterToggle with this partial
to unify the different ways it was created

--- a/app/views/layouts/_pagingcontrols.html.haml
+++ b/app/views/layouts/_pagingcontrols.html.haml
@@ -12,8 +12,9 @@
         - if @pc_occ == 1
           .form-group
             - if !@no_checkall && !@no_checkboxes
-              %input{:id => 'masterToggle', :type => 'checkbox', :name => 'masterToggle', :onclick => "miqUpdateAllCheckboxes('#{button_div}', null);"}
-              = _("(Check All)")
+              = render :partial => 'shared/master_toggle',
+                       :locals  => {:button_div => button_div,
+                                    :label      => _("(Check All)")}
         - if @gtl_type != "list" && @view
           .form-group{:style => "border-right: 0"}
             = _('Sorted by: ')
