Enable rendering toolbar from dashboard dashboard toolbar is secified in custom html file, so we have to use render partial and this html string insert to JSON response so we can use angular's toolbars

--- a/app/views/layouts/_content.html.haml
+++ b/app/views/layouts/_content.html.haml
@@ -116,8 +116,7 @@
           .col-md-12
             .toolbar-pf-actions
               - if @widgets_menu
-                = render :partial => "dashboard/dropdownbar"
-
+                = render :partial => "layouts/angular/toolbar"
         .row#main-content
           .col-md-12
             .spacer
