add miq_debug.css - in line with miq_debug.js
A stylesheet for things specific to devel mode..

contains styling for the toast message wrapper

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
       = javascript_include_tag 'application'
       - if Rails.env.development?
         = javascript_include_tag 'miq_debug'
+        = stylesheet_link_tag 'miq_debug'
       = render :partial => 'layouts/i18n_js'
     %body{:style => "overflow: scroll; padding: 0 20px 0 20px !important"}
       = yield
@@ -28,6 +29,7 @@
       = javascript_include_tag 'application'
       - if Rails.env.development?
         = javascript_include_tag 'miq_debug'
+        = stylesheet_link_tag 'miq_debug'
       = csrf_meta_tag
       = render :partial => 'layouts/i18n_js'
       - if @timeline
