Convert every onclick on checkboxes to onchange
This is so that checkbox handlers do the correct thing even when the checkbox was checked by keyboard, etc.

https://bugzilla.redhat.com/show_bug.cgi?id=1343659

--- a/app/views/layouts/_ae_tree_select.html.haml
+++ b/app/views/layouts/_ae_tree_select.html.haml
@@ -34,7 +34,7 @@
                              :autoload            => true})
       .modal-footer
         %div{:id => "include_domain_prefix_div"}
-          %input#include_domain_prefix_chk{:onclick  => "miqOnClickIncludeDomainPrefix()",
+          %input#include_domain_prefix_chk{:onchange  => "miqOnClickIncludeDomainPrefix()",
                                            :type     => "checkbox",
                                            :disabled => "disabled"}
           = _("Include Domain prefix in the path")
