--- a/app/views/shared/_master_toggle.html.haml
+++ b/app/views/shared/_master_toggle.html.haml
@@ -1,4 +1,4 @@
 %input#masterToggle{:name    => "masterToggle",
                     :type    => "checkbox",
-                    :onclick => "miqUpdateAllCheckboxes('#{button_div}');"}
+                    :onchange => "miqUpdateAllCheckboxes('#{button_div}');"}
 = label
