--- a/app/views/ops/_smartproxy_affinity.html.haml
+++ b/app/views/ops/_smartproxy_affinity.html.haml
@@ -6,9 +6,9 @@
     %strong
       = _("No Servers with the SmartProxy role are in Zone: \"%{zone_description}\"") % {:zone_description => @selected_zone.description}
 - else
-  - tree_id = "smartproxy_affinity_treebox"
-  %div{:id => tree_id}
-  = render(:partial => "layouts/dynatree",
+  -#- tree_id = "smartproxy_affinity_treebox"
+  -#%div{:id => tree_id}
+  -#= render(:partial => "layouts/dynatree",
     :locals => {:tree_id         => tree_id,
     :tree_name                   => session[:tree_name],
     :json_tree                   => @smartproxy_affinity_tree.to_json,
@@ -17,3 +17,4 @@
     :open_close_all_on_dbl_click => true,
     :check_url                   => '/ops/smartproxy_affinity_field_changed/',
     :oncheck                     => 'miqOnClickSmartProxyAffinityCheck'})
+  = render(:partial => 'shared/tree', :locals => {:tree => @smart, :name => @smart.name})
