--- a/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
+++ b/app/views/layouts/angular-bootstrap/_endpoints_angular.html.haml
@@ -28,7 +28,7 @@
   .form-group{"ng-class" => "{'has-error': angularForm.#{prefix}_api_port.$invalid}",
               "ng-if" => "emsCommonModel.emstype == 'openstack' || " +       |
                          "emsCommonModel.emstype == 'openstack_infra' || " + |
-                         "emsCommonModel.emstype == 'nuage' || " +           |
+                         "emsCommonModel.emstype == 'nuage_network' || " +           |
                          "emsCommonModel.emstype == 'rhevm' || " +           |
                          "emsCommonModel.emstype == 'vmware_cloud' || " +    |
                          "emsCommonModel.ems_controller == 'ems_container'"} |
@@ -76,7 +76,7 @@
   .form-group{"ng-class" => "{'has-error': angularForm.#{prefix}_security_protocol.$invalid}",
               "ng-if"    => "emsCommonModel.emstype == 'openstack' || " +       |
                             "emsCommonModel.emstype == 'openstack_infra' || " + |
-                            "emsCommonModel.emstype == 'nuage' || " +           |
+                            "emsCommonModel.emstype == 'nuage_network' || " +           |
                             "emsCommonModel.emstype == 'scvmm'"}                |
     %label.col-md-2.control-label{"for" => "#{prefix}_security_protocol"}
       = _('Security Protocol')
