--- a/app/views/layouts/angular/_multi_auth_credentials.html.haml
+++ b/app/views/layouts/angular/_multi_auth_credentials.html.haml
@@ -319,7 +319,7 @@
     miq_tabs_show_hide("#ssh_keypair_tab", true);
     miq_tabs_init('#auth_tabs');
     $('#auth_tabs').show();
-%div{"ng-if" => "#{ng_model}.emstype == 'nuage'"}
+%div{"ng-if" => "#{ng_model}.emstype == 'nuage_network'"}
   :javascript
     miq_tabs_init('#auth_tabs');
     $('#auth_tabs').show();
